name:          pokemon
version:       0.1.0.0
license-file:  LICENSE
author:        Vincent
maintainer:    vpark45@gmail.com
category:      Text
build-type:    Simple
cabal-version: >= 1.10

executable pokemon
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , text
                  , random
  default-language: Haskell2010
